tests/fixtures/invalid-only/compliant-first.php
<?php

declare(strict_types=1);

$compliant = [1];
